--- a/emacs/main.tex
+++ b/emacs/main.tex
@@ -4,6 +4,7 @@
 \usepackage[margin=0.5in]{geometry}
 \usepackage{eso-pic}
 \usepackage[english]{babel}
+\usepackage{gensymb}
 
 \definecolor{my-grey}{HTML}{696969}
 \definecolor{my-blue}{HTML}{4635f7}
